fixed docker file

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
 WORKDIR /app
-COPY package.json /app/package.json
+COPY package*.json .
 RUN npm install
-COPY . /app
-RUN npm start
+EXPOSE 3000
+CMD ["npm", "start"]
