--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:alpine
 WORKDIR /app
 COPY package.json /app/package.json
-RUN apk --no-cache add --virtual builds-deps build-base python
 RUN npm install
 COPY . /app
-CMD ["nodemon", "index.js"]
+ENV NODE_ENV=development
 EXPOSE 8080
+CMD ["node", "index.js"]
